VM-Configs/Rocky-K8s/k8s-manifests/vaultwarden.yaml
---
# 2. Creazione del Container Vaultwarden
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: vaultwarden/server:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: vaultwarden-pvc
---
# 3. Rete Interna
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
  namespace: default
spec:
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
# 4. Dominio Esterno (Ingress Traefik)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: default
spec:
  rules:
  - host: vaultwarden-labuburocky.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-service
            port:
              number: 80
